pod-security/baseline/disallow-capabilities/disallow-capabilities.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities
  annotations:
    policies.kyverno.io/title: Disallow Capabilities
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/minversion: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/subject: Pod
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/baseline/disallow-capabilities/"
    policies.nirmata.io/remediation: "https://github.com/nirmata/kyverno-policies/tree/main/pod-security/baseline/disallow-capabilities/remediate-disallow-capabilities.yaml"
    policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,soc2,iso27001,nsa-cisa,nist-800-53"
    policies.nirmata.io/nsa-cisa-control: "Sec.1.4"
    policies.nirmata.io/nist-800-53-control: "AC-6,CM-7"
    policies.kyverno.io/description: >-
      Any additional capabilities not mentioned in the allowed list, which includes AUDIT_WRITE, CHOWN, DAC_OVERRIDE, FOWNER, FSETID, KILL, MKNOD, NET_BIND_SERVICE, SETFCAP, SETGID, SETPCAP, SETUID, SYS_CHROOT, are prohibited and not permitted.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: adding-capabilities
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Adding capabilities beyond those listed in the policy rule is disallowed.
        deny:
          conditions:
            all:
              - key: "{{ request.object.spec.[ephemeralContainers, initContainers, containers][].securityContext.capabilities.add[] }}"
                operator: AnyNotIn
                value:
                  - AUDIT_WRITE
                  - CHOWN
                  - DAC_OVERRIDE
                  - FOWNER
                  - FSETID
                  - KILL
                  - MKNOD
                  - NET_BIND_SERVICE
                  - SETFCAP
                  - SETGID
                  - SETPCAP
                  - SETUID
                  - SYS_CHROOT
