pod-security/baseline/disallow-capabilities/e2e/01-policy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- ../disallow-capabilities.yaml
assert:
- policy-assert.yaml
