pod-security/baseline/disallow-capabilities/e2e/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-capabilities
spec:
  validationActions: [Audit]
status:
  conditionStatus:
    ready: true
