pod-security/baseline/disallow-capabilities/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-capabilities-policy
spec:
  steps:
  - name: test-disallow-capabilities
    try:
    - apply:
        file: ../disallow-capabilities.yaml
    - assert:
        file: policy-assert.yaml
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../disallow-capabilities.yaml | kubectl apply -f - 
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - script:
        content: ./bad-resource-test.sh
